# osa_cli_bugs

./: .gitignore  setup.cfg
osa_cli_bugs/: bugmgmt.py  cli.py  click.py
tests/: test_bugmgmt.py  test_include.py
