[metadata]
name = osa_cli_bugs
version = 0.1alpha1
description = Bugs toolkit for OpenStack-Ansible
long_description = file: README.rst
author = Jean-Philippe Evrard
author_email = jean-philippe@evrard.me
license = file: LICENSE
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
packages = osa_cli_bugs
install_requires =
    launchpadlib
    setuptools>=30.3

[options.entry_points]
console_scripts =
    generate-bugtriage-page = osa_cli_bugs.cli:bugtriage

osa_cli.plugins =
    bugs  = osa_cli_bugs.click:bugs
